# HKUCourseHub-backend

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  restart.sh  run.py
.lingma/rules/: project_rule.md
backend/: .gitignore
backend/alembic/: env.py
backend/app/: router.py
backend/app/admin/: conf.py
backend/app/admin/api/: router.py
backend/app/admin/api/v1/auth/: __init__.py
backend/app/admin/api/v1/log/: __init__.py
backend/app/admin/api/v1/monitor/: __init__.py
backend/app/admin/api/v1/oauth2/: __init__.py
backend/app/admin/api/v1/sys/: __init__.py
backend/app/admin/crud/: crud_role.py
backend/app/admin/model/: __init__.py  course.py  course_forum.py  course_schedule.py  course_teacher.py  favorite_course.py  forum_reply.py  user.py  user_course.py
backend/app/admin/schema/: user.py
backend/app/main/: __init__.py  conf.py
backend/app/main/api/: router.py
backend/app/main/api/v1/auth/: __init__.py  auth.py  captcha.py  register.py
backend/app/main/api/v1/main/: __init__.py  course.py  (+3 more)
backend/app/main/crud/: crud_course.py  crud_course_schedule.py  crud_forum.py  crud_forum_reply.py  crud_user.py  crud_user_course.py  crud_user_favorite_course.py  curd_course_teacher.py
backend/app/main/model/: __init__.py  course_forums.py  course_schedules.py  course_teachers.py  courses.py  favorite_courses.py  forum_replies.py  user_courses.py  users.py
backend/app/main/schema/: course.py  course_schedule.py  course_teacher.py  favorite_course.py  form.py  forum_reply.py  token.py  user.py  user_course.py
backend/app/main/service/: auth_service.py  course_service.py  forum_service.py  user_service.py
backend/common/: pagination.py
backend/common/exception/: errors.py
backend/common/security/: jwt.py
backend/core/: registrar.py
backend/middleware/: jwt_auth_middleware.py
backend/scripts/: init_data.py
backend/sql/mysql/: create_tables.sql  init_test_data.sql
